--- a/RESS.Rcheck/00_pkg_src/RESS/DESCRIPTION
+++ b/RESS.Rcheck/00_pkg_src/RESS/DESCRIPTION
@@ -8,4 +8,4 @@ Maintainer: Who to complain to <bwaxer@auriq.com>
 Description: Query the Essentia Database and access the results in R
 License: Same as Essentia. Free to use but do not make or distribute
         any copies.
-Packaged: 2015-02-25 01:36:42 UTC; root
+Packaged: 2015-02-26 17:43:55 UTC; ec2-user
