--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,4 +6,4 @@ Date: 2015-02-12
 Author: Ben Waxer
 Maintainer: Who to complain to <bwaxer@auriq.com>
 Description: Query the Essentia Database and access the results in R
-License: Same as Essentia. Free to use but do not make or distribute any copies.
+License: LGPL-3
