--- a/RESS.Rcheck/RESS/DESCRIPTION
+++ b/RESS.Rcheck/RESS/DESCRIPTION
@@ -6,7 +6,6 @@ Date: 2015-02-12
 Author: Ben Waxer
 Maintainer: Who to complain to <bwaxer@auriq.com>
 Description: Query the Essentia Database and access the results in R
-License: Same as Essentia. Free to use but do not make or distribute
-        any copies.
-Packaged: 2015-02-26 17:43:55 UTC; ec2-user
-Built: R 3.1.1; ; 2015-02-26 17:44:12 UTC; unix
+License: LGPL-3
+Packaged: 2015-02-26 18:50:07 UTC; ec2-user
+Built: R 3.1.1; ; 2015-02-26 18:50:22 UTC; unix
