--- a/RESS.Rcheck/RESS/DESCRIPTION
+++ b/RESS.Rcheck/RESS/DESCRIPTION
@@ -1,11 +1,14 @@
 Package: RESS
 Type: Package
 Title: Integrates R and Essentia
-Version: 1.0
-Date: 2015-03-03
+Version: 1.2
+Date: 2015-07-22
 Author: Ben Waxer
 Maintainer: Ben Waxer <bwaxer@auriq.com>
-Description: Contains two functions that query AuriQ Systems' Essentia Database and return the results in R. 'essQuery' takes a single Essentia command and captures the output in R, where you can save the output to a dataframe or stream it directly into additional analysis. 'read.udb' takes a file containing any number of Essentia commands and captures the output of the specified statements into R dataframes. Essentia can be downloaded for free at http://www.auriq.com/documentation/source/install.html.
+Description: Contains two functions that query AuriQ Systems' Essentia Database and return the results in R. 'essQuery' takes a single Essentia command and captures the output in R, where you can save the output to a dataframe or stream it directly into additional analysis. 'read.udb' takes a file containing any number of Essentia commands and captures the output of the specified statements into R dataframes. Essentia can be downloaded for free at http://www.auriq.com/documentation/source/install/index.html.
 License: LGPL-3
-Packaged: 2015-03-06 00:33:03 UTC; ec2-user
-Built: R 3.1.1; ; 2015-03-06 00:33:35 UTC; unix
+Packaged: 2015-07-23 02:31:45 UTC; ec2-user
+NeedsCompilation: no
+Repository: CRAN
+Date/Publication: 2015-03-06 08:20:41
+Built: R 3.1.1; ; 2015-07-23 02:33:01 UTC; unix
