--- a/RESS.Rcheck/RESS/DESCRIPTION
+++ b/RESS.Rcheck/RESS/DESCRIPTION
@@ -7,8 +7,9 @@ Author: Ben Waxer
 Maintainer: Ben Waxer <bwaxer@auriq.com>
 Description: Contains two functions that query AuriQ Systems' Essentia Database and return the results in R. 'essQuery' takes a single Essentia command and captures the output in R, where you can save the output to a dataframe or stream it directly into additional analysis. 'read.udb' takes a file containing any number of Essentia commands and captures the output of the specified statements into R dataframes. Essentia can be downloaded for free at http://www.auriq.com/documentation/source/install/index.html.
 License: LGPL-3
-Packaged: 2015-07-23 17:25:46 UTC; ec2-user
+Packaged: 2015-07-29 22:24:37 UTC; ec2-user
 NeedsCompilation: no
 Repository: CRAN
 Date/Publication: 2015-03-06 08:20:41
-Built: R 3.1.1; ; 2015-07-23 17:29:56 UTC; unix
+Imports: utils
+Built: R 3.1.1; ; 2015-07-29 22:25:26 UTC; unix
