--- a/RESS.Rcheck/00_pkg_src/RESS/NAMESPACE
+++ b/RESS.Rcheck/00_pkg_src/RESS/NAMESPACE
@@ -1,2 +1,3 @@
 exportPattern("^[[:alpha:]]+")
 importFrom("utils", "read.csv")
+Sys.setenv(PATH=paste(Sys.getenv("PATH"),":/opt/aq_tool/bin",sep=""))
